design patterns added

--- a/index.html
+++ b/index.html
@@ -78,8 +78,11 @@
           </div>
           <!-- Placeholder Card for Future Sections -->
           <div class="card">
-            <h3>Coming Soon...</h3>
-            <p>New topics will be added soon.</p>
+            <h3>Design Patterns</h3>
+            <p>Software Design.</p>
+            <a href="./designpatterns.html" target="_blank" class="card-link"
+              >Explore</a
+            >
           </div>
         </div>
       </div>
