--- a/index.html
+++ b/index.html
@@ -84,6 +84,13 @@
               >Explore</a
             >
           </div>
+          <div class="card">
+            <h3>JavaScript</h3>
+
+            <a href="./javascript.html" target="_blank" class="card-link"
+              >Explore</a
+            >
+          </div>
         </div>
       </div>
     </section>
