html and css added

--- a/index.html
+++ b/index.html
@@ -91,6 +91,13 @@
               >Explore</a
             >
           </div>
+          <div class="card">
+            <h3>HTML & CSS</h3>
+
+            <a href="./html&css.html" target="_blank" class="card-link"
+              >Explore</a
+            >
+          </div>
         </div>
       </div>
     </section>
