--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
         const cardsData = [
           { title: "Computer Science", link: "./cs.html" },
           { title: "Data Structures & Algorithms (DSA)", link: "./dsa.html" },
+          {
+            title: "DSA Visulization",
+            link: "https://dsa-viz-beta.vercel.app/",
+          },
           { title: "Design Patterns", link: "./designpatterns.html" },
           { title: "HTML & CSS", link: "./html&css.html" },
           { title: "JavaScript", link: "./javascript.html" },
